commit cart fix additeam